# esp32-lora-sensor

./: .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
components/: component.mk
components/lora_device_lib/: CMakeLists.txt  Kconfig.projbuild  Makefile.projbuild  component.mk
components/lora_device_lib/include/: ldl_config.h
components/lora_device_lib/src/: ldl_config.c
hardware/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  battery.c  battery.h  ble.c  ble.h  bme.c  bme.h  cayenne.h  component.mk  i2c.c  i2c.h  lmic_config.h  lmic_hal.c  lmic_hal.h  lora.c  lora.h  main.c  peripherals.c  peripherals.h  profile.c  profile.h  profile_default.c  profile_environmental.c  profile_environmental.h  profile_soil_moisture.c  profile_soil_moisture.h  sensor.c  sensor.h  storage_key.h
